--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 .header {
     display: flex;
     flex: 1;
+    flex-direction: column;
     max-width: 80%;
 }
 
@@ -43,4 +44,52 @@ a {
     display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.hero-content {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    gap: 40px;
+    padding: 80px 0 100px 0;
+}
+
+.left-section {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+    margin: 0 0 8px 0;
+    padding: 0;
+}
+
+p {
+    font-size: 18px;
+    color: #e5e7eb;
+    margin: 0;
+    padding: 0;
+}
+
+.signup {
+    background-color: #3882f6;
+    color: #f9faf8;
+    width: 100px;
+    height: 30px;
+    border-radius: 6px;
+    border: none;
+    font-weight: 700;
+    margin-top: 8px;
+}
+
+.right-section {
+    display: flex;
+    flex: 1;
+    width: 50%;
+    height: 100%;
+    background-color: #a5a5a7;
 }
