--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
 .content {
     display: flex; 
     flex: 1;
+    flex-direction: column;
+}    
+
+/* Hero Section*/
+.hero-section {
+    display: flex;
+    flex: 1;
     background-color: #1f2937;
     justify-content: center;
 }
+
 
 .header {
     display: flex;
@@ -92,4 +100,64 @@ p {
     width: 50%;
     height: 100%;
     background-color: #a5a5a7;
+}
+
+/* Team Section*/
+
+.team-section {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    
+}
+
+.team-content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    max-width: 80%;
+}
+
+.team-heading {
+    display: flex;
+    flex: 1;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    justify-content: center;
+    margin: 30px 0 0 0;
+}
+
+.people {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    gap: 20px;
+    margin: 30px 0 0 0;
+
+}
+
+.person {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.photo {
+    display: flex;
+    flex: 1;
+    border: 2px solid #3882f6;
+    min-width: 100px;
+    min-height: 100px;
+    justify-content: center;
+    border-radius: 8px;
+}
+
+.info {
+    display: flex;
+    flex: 1;
+    text-align: center;
+    margin: 8px 0 0 0;
 }
