--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ p {
     display: flex;
     flex: 1;
     justify-content: center;
+    padding: 80px 0 80px 0;
     
 }
 
@@ -125,7 +126,7 @@ p {
     font-weight: 900;
     color: #1f2937;
     justify-content: center;
-    margin: 30px 0 0 0;
+    padding: 0 0 60px 0;
 }
 
 .people {
@@ -133,7 +134,6 @@ p {
     flex: 1;
     justify-content: center;
     gap: 20px;
-    margin: 30px 0 0 0;
 
 }
 
@@ -160,4 +160,35 @@ p {
     flex: 1;
     text-align: center;
     margin: 8px 0 0 0;
+}
+
+/*Quote Section*/
+.quote-section {
+    display: flex;
+    flex: 1;
+    background-color: #e5e7eb;
+    justify-content: center;
+   
+} 
+
+.quote-content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    max-width: 80%;
+    padding: 80px 0 80px 0;
+
+}
+.quote-text {
+    display: flex;
+    flex: 1;
+    font-style: italic;
+    font-size: 36px;
+    text-align: center;
+}
+
+.author {
+    font-weight: 900;
+    text-align: right;
+    padding: 15px 30px 0 0;
 }
