--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 .content {
     display: flex; 
     flex: 1;
@@ -17,9 +21,10 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    max-width: 80%;
+    max-width: 60%;
 }
 
+/*Nav bar*/
 a {
     text-decoration: none;
 }
@@ -59,7 +64,7 @@ a {
     flex: 1;
     align-items: center;
     gap: 40px;
-    padding: 80px 0 100px 0;
+    padding: 150px 0 180px 0;
 }
 
 .left-section {
@@ -67,6 +72,7 @@ a {
     flex: 1;
     flex-direction: column;
 }
+
 
 h1 {
     font-size: 48px;
@@ -99,6 +105,8 @@ p {
     flex: 1;
     width: 50%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
     background-color: #a5a5a7;
 }
 
@@ -108,7 +116,7 @@ p {
     display: flex;
     flex: 1;
     justify-content: center;
-    padding: 80px 0 80px 0;
+    padding: 40px 0 80px 0;
     
 }
 
@@ -116,7 +124,8 @@ p {
     display: flex;
     flex: 1;
     flex-direction: column;
-    max-width: 80%;
+    align-items: center;
+    max-width: 60%;
 }
 
 .team-heading {
@@ -126,14 +135,16 @@ p {
     font-weight: 900;
     color: #1f2937;
     justify-content: center;
-    padding: 0 0 60px 0;
+    
 }
 
 .people {
     display: flex;
     flex: 1;
     justify-content: center;
-    gap: 20px;
+    max-width: 150px;
+    gap: 40px;
+    padding: 30px 0 0 0;
 
 }
 
@@ -149,8 +160,8 @@ p {
     display: flex;
     flex: 1;
     border: 2px solid #3882f6;
-    min-width: 100px;
-    min-height: 100px;
+    min-width: 150px;
+    min-height: 150px;
     justify-content: center;
     border-radius: 8px;
 }
@@ -175,7 +186,7 @@ p {
     display: flex;
     flex: 1;
     flex-direction: column;
-    max-width: 80%;
+    max-width: 60%;
     padding: 80px 0 80px 0;
 
 }
@@ -191,4 +202,69 @@ p {
     font-weight: 900;
     text-align: right;
     padding: 15px 30px 0 0;
+}
+
+.signup-section {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    padding: 100px 0 100px 0;
+}
+
+.signup-bg {
+    display: flex;
+    flex: 1 1 40%;
+    max-width: 40%;
+    background-color: #3882f6;
+    border-radius: 8px;
+    padding: 30px 50px 30px 50px;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+.signup-content {
+    display: flex;
+    flex: 1;
+    max-width: 80%;
+}
+
+.signup-text {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
+
+.signup-heading {
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+
+.signup-description {
+    font-size: 14px;
+    color: white;
+}
+
+.signup-button {
+    display: flex;
+}
+
+.button {
+    display: flex;
+    flex: 1;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: #3882f6;
+    border: 1px solid white;
+    border-radius: 4px;
+    padding: 0px 28px 0px 28px;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-text {
+    padding: 15px 0 15px 0;
+    color: white;
+    font-size: 14px;
 }
