--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 body {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
 }
+
 .content {
     display: flex; 
     flex: 1;
@@ -12,8 +14,9 @@ body {
 .hero-section {
     display: flex;
     flex: 1;
+    flex-direction: column;
     background-color: #1f2937;
-    justify-content: center;
+    align-items: center;
 }
 
 
@@ -21,6 +24,7 @@ body {
     display: flex;
     flex: 1;
     flex-direction: column;
+    padding: 20px 0 0 0; 
     max-width: 60%;
 }
 
@@ -30,20 +34,47 @@ a {
 }
 
 .logo-container a {
+    display: flex;
+    flex: 1;
     font-size: 24px;
-    color: #f9faf8;
+    color: #1f2937;
 }
 
 .link-container a {
+    display: flex;
     font-size: 18px;
-    color: #e5e7eb;
+    color: #1f2937;
     
+}
+
+.logo-text {
+    display: flex;
+    align-items: center;
+}
+
+
+.logo-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 18px;
+    padding: 0 6px 0 6px;
+    margin: 0;
+}
+
+.mid-img {
+    margin: 0;
+    padding: 0;
 }
 
 .nav-bar {
     display: flex;
     flex: 1;
-    padding: 10px;
+    padding: 10px 25px 10px 25px;
+    background-color: rgb(247, 172, 197);
+    border-radius: 50px;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -62,15 +93,17 @@ a {
 .hero-content {
     display: flex;
     flex: 1;
+    flex-wrap: wrap;
     align-items: center;
     gap: 40px;
-    padding: 150px 0 180px 0;
+    padding: 100px 0 100px 0;
 }
 
 .left-section {
     display: flex;
     flex: 1;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 
@@ -90,47 +123,49 @@ p {
 }
 
 .signup {
-    background-color: #3882f6;
+    background-color: rgb(216, 133, 161);
     color: #f9faf8;
-    width: 100px;
-    height: 30px;
     border-radius: 6px;
     border: none;
+    max-width: 35%;
+    max-height: auto;
+    font-size: 18px;
     font-weight: 700;
-    margin-top: 8px;
+    margin-top: 12px;
+    padding: 10px 0 10px 0;
 }
 
 .right-section {
     display: flex;
     flex: 1;
-    width: 50%;
-    height: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #a5a5a7;
 }
 
-/* Team Section*/
-
-.team-section {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    padding: 40px 0 80px 0;
-    
+img {
+    max-width: 100%;
 }
 
-.team-content {
+/* pets Section*/
+
+.pets-section {
     display: flex;
     flex: 1;
     flex-direction: column;
     align-items: center;
-    max-width: 60%;
+    padding: 40px 0 80px 0;
+    
 }
 
-.team-heading {
+.pets-content {
     display: flex;
     flex: 1;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.pets-heading {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
@@ -138,37 +173,34 @@ p {
     
 }
 
-.people {
+.pets {
     display: flex;
-    flex: 1;
+    flex-wrap: wrap;
     justify-content: center;
-    max-width: 150px;
     gap: 40px;
     padding: 30px 0 0 0;
 
 }
 
-.person {
+.cat-dog {
     display: flex;
     flex: 1;
     flex-direction: column;
+    max-width: 200px;
     align-items: center;
 
 }
 
-.photo {
-    display: flex;
-    flex: 1;
-    border: 2px solid #3882f6;
+.pet-img {
     min-width: 150px;
     min-height: 150px;
-    justify-content: center;
     border-radius: 8px;
 }
 
 .info {
     display: flex;
     flex: 1;
+    flex-direction: column;
     text-align: center;
     margin: 8px 0 0 0;
 }
@@ -177,8 +209,9 @@ p {
 .quote-section {
     display: flex;
     flex: 1;
+    flex-direction: column;
     background-color: #e5e7eb;
-    justify-content: center;
+    align-items: center;
    
 } 
 
@@ -204,62 +237,77 @@ p {
     padding: 15px 30px 0 0;
 }
 
-.signup-section {
+/*Sign up*/
+.banner-section {
     display: flex;
     flex: 1;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 100px 0 100px 0;
 }
 
-.signup-bg {
+.banner-bg {
     display: flex;
     flex: 1 1 40%;
     max-width: 40%;
-    background-color: #3882f6;
+    background-color: rgb(216, 133, 161);
     border-radius: 8px;
-    padding: 30px 50px 30px 50px;
+    padding: 20px 50px 20px 50px;
     justify-content: space-evenly;
     align-items: center;
 
 }
-.signup-content {
+.banner-content {
     display: flex;
-    flex: 1;
     max-width: 80%;
+    flex-wrap: wrap;
+    gap: 40px;
+    align-items: center;
 }
 
-.signup-text {
+.banner-text {
     display: flex;
-    flex: 1;
+    flex: 3 1 0;
     flex-direction: column;
 }
 
-.signup-heading {
+.banner-heading {
     font-size: 20px;
     font-weight: 700;
     color: white;
 }
 
-.signup-description {
+.banner-description {
     font-size: 14px;
     color: white;
 }
 
-.signup-button {
+.banner-button {
     display: flex;
+    flex: 1;
+    max-height: 50px;
+    
+
 }
 
 .button {
     display: flex;
-    flex: 1;
     color: white;
+    flex-shrink: 0;
     font-size: 16px;
     font-weight: 700;
-    background-color: #3882f6;
     border: 1px solid white;
-    border-radius: 4px;
-    padding: 0px 28px 0px 28px;
+    border-radius: 6px;
+    background-color: transparent;
+    padding: 10px 20px 10px 20px;
     align-items: center;
+    justify-content: center;
+   
+}
+
+.footer-section {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -267,4 +315,5 @@ p {
     padding: 15px 0 15px 0;
     color: white;
     font-size: 14px;
+
 }
